--- a/templates/banner.html
+++ b/templates/banner.html
@@ -22,13 +22,14 @@
 -->
 
   <section class="top-bar-section">
-    <ul class="right">
+    <ul class="right"><!--
       <li class="divider"></li>
       <li><a href="/faq.html"><span class="bree">FAQ</span></a></li>
       <li class="divider"></li>
-      <li><a href="/about.html" ><span class="bree">About Me</a></li>
+      <li><a href="/about.html" ><span class="bree">About Me</a></li> -->
         <li class="divider"></li>
         <li><a href="https://github.com/davidawad/spaceshare"> <span class="bree">Docs</span></a></li>
         <li class="divider"></li>
+	</ul>
       </section>
     </nav>
