--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
 		<div class="panel">
       <center>
 		    <h2><a href="" class="bree">Create a Space</a></h2>
-        <form action="upload" method="POST" enctype="multipart/form-data" onsubmit="fileUpload();">
+        <form id="create-form" action="upload" method="POST" enctype="multipart/form-data" onsubmit="fileUpload();">
           <br>
 			    <input type="number" name="space" id="reserve" placeholder="e.g. '32' "/>
 			    <input type="file" name="file">
@@ -69,7 +69,7 @@
       <center>
 			<h2><a href="" class="bree">Open a Space</a></h2>
       <br>
-      <form action="open" method="" onsubmit="SubmitFrm(); return false;" >
+      <form id="open-form" action="open" method="" onsubmit="SubmitFrm(); return false;" >
 				<input type="number" name="space" id="redir" placeholder="e.g. '32' "/>
         <br>
         <input type="submit" value="download" class="radius button" style="font-family:Pacifico ; font-size:2em">
