--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
           <br>
 			    <input type="number" name="space" id="reserve" placeholder="e.g. '32' "/>
 			    <input type="file" name="file">
-          <input type="submit" value="upload" class="radius button" style="font-family:Pacifico ; font-size:2em">
+          <input id="create-button" type="submit" value="upload" class="radius button" style="font-family:Pacifico ; font-size:2em">
         </center>
 		    </form>
     </div>
@@ -72,7 +72,7 @@
       <form id="open-form" action="open" method="" onsubmit="SubmitFrm(); return false;" >
 				<input type="number" name="space" id="redir" placeholder="e.g. '32' "/>
         <br>
-        <input type="submit" value="download" class="radius button" style="font-family:Pacifico ; font-size:2em">
+        <input id="open-button" type="submit" value="download" class="radius button" style="font-family:Pacifico ; font-size:2em">
         </center>
       </form>
       <br>
