--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,9 +7,9 @@
       </div>
       <div class="large-6 columns">
         <ul class="inline-list right">
-          <li><a href="https://google.com"><i class="icon-facebook_circle icon2x"></i></a></li>
-          <li><a href="https://google.com"><i class="icon-twitter_circle icon2x"></i></a></li>
-          <li><a href="https://github.com"><i class="icon-git_circle icon2x"></i></a></li>
+          <li><a href="https://facebook.com/"><i class="icon-facebook_circle icon2x"></i></a></li>
+          <li><a href="https://twitter.com/drepsi"><i class="icon-twitter_circle icon2x"></i></a></li>
+          <li><a href="https://github.com/davidawad"><i class="icon-git_circle icon2x"></i></a></li>
         </ul>
       </div>
     </div>
