--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
 <div class="row">
 
   <div class="large-6 columns">
-    <p class="look" id="gist" style="z-index=1"> Share files...
+    <p class="look animated fadeInDown delay-03s" id="gist" style="z-index=1"> Share files...
     <br>
-    <span id="gistTwo"style="z-index=-10;color:#888">instantly.</span></p>
+    <span id="gistTwo" class="animated fadeInUp delay-12s" style="z-index=-10;color:#888">instantly.</span></p>
   </div>
   <div class="large-6 columns">
     <br>
@@ -25,7 +25,7 @@
     <br>
     <br>
     <br>
-    <p class="bree" style="font-size:1.3em"> Just upload a file and grab it somewhere else, it's quick, and it's simple, the way file sharing should be. Enjoy. </p>
+    <p class="bree animated fadeInUp delay-15s" style="font-size:1.3em"> Just upload a file and grab it somewhere else, it's quick, and it's simple, the way file sharing should be. Enjoy. </p>
   </div>
 </div>
 
