--- a/templates/includes.html
+++ b/templates/includes.html
@@ -1,7 +1,27 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='stylesheet.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='animate.css') }}">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='foundation.css') }}">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='mfglabs_iconset.css') }}">
+
 <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon"/>
 <link rel="shortcut icon" href="http://faviconist.com/icons/b088547447296f75af21a368e872d2ef/favicon.ico" />
+
+<link rel="apple-touch-icon" sizes="57x57" href="{{ url_for('static', filename='favicons/apple-touch-icon-57x57.png') }}">
+<link rel="apple-touch-icon" sizes="60x60" href="{{ url_for('static', filename='favicons/apple-touch-icon-60x60.png') }}">
+<link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='favicons/apple-touch-icon-72x72.png') }}">
+<link rel="apple-touch-icon" sizes="76x76" href="{{ url_for('static', filename='favicons/apple-touch-icon-76x76.png') }}">
+<link rel="apple-touch-icon" sizes="114x114" href="{{ url_for('static', filename='favicons/apple-touch-icon-114x114.png') }}">
+<link rel="apple-touch-icon" sizes="120x120" href="{{ url_for('static', filename='favicons/apple-touch-icon-120x120.png') }}">
+<link rel="apple-touch-icon" sizes="144x144" href="{{ url_for('static', filename='favicons/apple-touch-icon-144x144.png') }}">
+<link rel="apple-touch-icon" sizes="152x152" href="{{ url_for('static', filename='favicons/apple-touch-icon-152x152.png') }}">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='favicons/apple-touch-icon-180x180.png') }}">
+<link rel="icon" type="image/png" href="{{ url_for('static', filename='favicons/favicon-32x32.png') }}" sizes="32x32">
+<link rel="icon" type="image/png" href=" {{ url_for('static', filename='favicons/android-chrome-192x192.png') }}" sizes="192x192">
+<link rel="icon" type="image/png" href="{{ url_for('static', filename='favicons/favicon-96x96.png') }}" sizes="96x96">
+<link rel="icon" type="image/png" href="{{ url_for('static', filename='favicons/favicon-16x16.png') }}" sizes="16x16">
+<link rel="manifest" href="{{ url_for('static', filename='favicons/manifest.json') }}">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="{{ url_for('static', filename='favicons/mstile-144x144.png') }}">
+<meta name="theme-color" content="#ffffff">
