--- a/spaceshare/templates/includes.html
+++ b/spaceshare/templates/includes.html
@@ -1,13 +1,20 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='stylesheet.css') }}">
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='animate.css') }}">
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='foundation.css') }}">
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='mfglabs_iconset.css') }}">
 
+<!-- Stylesheet Imports -->
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/stylesheet.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/animate.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/foundation.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/normalize.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/mfglabs/mfglabs_iconset.css') }}">
+
+<!-- Font Imports -->
+<link href='http://fonts.googleapis.com/css?family=Pacifico:400,700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Bree+Serif:400,700' rel='stylesheet' type='text/css'>
+
+<!-- Favicon Imports  -->
 <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon"/>
 <link rel="shortcut icon" href="http://faviconist.com/icons/b088547447296f75af21a368e872d2ef/favicon.ico" />
-
 <link rel="apple-touch-icon" sizes="57x57" href="{{ url_for('static', filename='favicons/apple-touch-icon-57x57.png') }}">
 <link rel="apple-touch-icon" sizes="60x60" href="{{ url_for('static', filename='favicons/apple-touch-icon-60x60.png') }}">
 <link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='favicons/apple-touch-icon-72x72.png') }}">
