--- a/spaceshare/templates/react-experiment.html
+++ b/spaceshare/templates/react-experiment.html
@@ -2,8 +2,13 @@
 
 {% block content %}
 
-    <div id="main">
-
+    <!-- This is the progress bar defined in react -->
+    <div id="prog_bar">
     </div>
+
+    <!-- this is our handy react defined search bar
+    <div id="main">
+    </div>
+    -->
 
 {% endblock %}
