--- a/spaceshare/static/css/stylesheet.css
+++ b/spaceshare/static/css/stylesheet.css
@@ -9,9 +9,42 @@
     font-style: normal;
 }
 
+
+.exbutton {
+  border: 0 none;
+  border-radius: 2px 2px 2px 2px;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Arial,sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 20px;
+  margin-bottom: 0;
+  margin-top: 10px;
+  padding: 7px 10px;
+  text-transform: none;
+  transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -webkit-transition: all 0.3s ease 0s;
+  width: 16.795%;
+  /* auto */
+  text-align: center;
+  /* DELETE WHEN WIDTH AUTO */
+}
+
+.exbutton.dark {
+  background: none repeat scroll 0 0 #444444;
+  color: #FFFFFF;
+}
+.exbutton.dark:hover {
+  background: none repeat scroll 0 0 #2DB6CF;
+  color: #FFFFFF;
+}
+
 html, body {
-  /*background-image: url("{{ url_for('static', filename='swirl_pattern.png') }}");*/
-  background-image: url("/img/swirl_pattern.png") !important ;
+  /* background-image: url("/img/swirl_pattern.png") !important ; */
+  background: #262626;
 }
 
 *::selection {
