fixed react components

--- a/spaceshare/templates/react-experiment.html
+++ b/spaceshare/templates/react-experiment.html
@@ -6,9 +6,9 @@
     <div id="prog_bar">
     </div>
 
-    <!-- this is our handy react defined search bar
+    <!-- this is our handy react defined search bar -->
     <div id="main">
     </div>
-    -->
+
 
 {% endblock %}
