frontend working more properly now

--- a/spaceshare/templates/includes.html
+++ b/spaceshare/templates/includes.html
@@ -6,7 +6,7 @@
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/animate.css') }}">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/foundation.css') }}">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/normalize.css') }}">
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/mfglabs/mfglabs_iconset.css') }}">
+<!-- <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/mfglabs/mfglabs_iconset.css') }}"> -->
 
 <!-- Font Imports -->
 <link href='http://fonts.googleapis.com/css?family=Pacifico:400,700' rel='stylesheet' type='text/css'>
