--- a/spaceshare/templates/react-experiment.html
+++ b/spaceshare/templates/react-experiment.html
@@ -6,25 +6,32 @@
 
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bower_components/bootstrap/dist/css/bootstrap.min.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/normalize.css') }}">
     </head>
     <body>
-        <!-- This is the progress bar defined in react -->
-        <div id="prog_bar">
+        <br>
+        <br>
+        <!-- Stack the columns on mobile by making one full-width and the other half-width -->
+        <div class="row">
+          <!-- This is the progress bar defined in react -->
+          <div class="large-6 columns" id="ProgressBar"></div>
+          <!-- react search bar -->
+          <div class="large-6 columns" id="DynamicSearch"></div>
         </div>
 
-        <!-- this is our handy react defined search bar -->
-        <div id="main">
-        </div>
 
         <script src="{{ url_for('static', filename='bower_components/react/react.min.js') }}"></script>
         <script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='bower_components/bootstrap/dist/js/bootstrap.min.js') }}"></script>
 
         <script src="{{ url_for('static', filename='js/main.js') }}"></script>
         <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
     </body>
 </html>
-{# {% endblock %} #)
+
+{#
+
+{% endblock %}
+
+#}
