frontend resource fixes

--- a/spaceshare/templates/react-experiment.html
+++ b/spaceshare/templates/react-experiment.html
@@ -8,10 +8,15 @@
         <br>
         <!-- Stack the columns on mobile by making one full-width and the other half-width -->
         <div class="row">
-          <!-- This is the progress bar defined in react -->
+          <div class="large-6 columns" id="FileForm"></div>
+
+
+          <!-- This is the progress bar defined in react
           <div class="large-6 columns" id="ProgressBar"></div>
-          <!-- react search bar -->
+          -->
+          <!-- react search bar
           <div class="large-6 columns" id="DynamicSearch"></div>
+          -->
         </div>
 
 {% endblock %}
