--- a/spaceshare/templates/base.html
+++ b/spaceshare/templates/base.html
@@ -26,10 +26,9 @@
     </nav>
     {# Include all static files in the base template #}
     {% include 'includes.html' %}
-    </head>
-    <body>
-        <br>
-
+  </head>
+  <body>
+    <br>
         <div class="row">
           <div class="large-6 columns">
             <p class="look animated fadeInDown delay-03s" id="gist" style="z-index=1"> Share files...
@@ -58,9 +57,9 @@
               </div>
               <div class="large-6 columns">
                 <ul class="inline-list right">
-                  <li><a href="https://facebook.com/"><i class="icon-facebook_circle icon2x"></i></a></li>
-                  <li><a href="https://twitter.com/drepsi"><i class="icon-twitter_circle icon2x"></i></a></li>
-                  <li><a href="https://github.com/davidawad"><i class="icon-git_circle icon2x"></i></a></li>
+                  <li><a href="https://facebook.com/david.a.awad"><i class="icon-facebook_circle icon2x"></i></a></li>
+                  <li><a href="https://twitter.com/realdavidawad"><i class="icon-twitter_circle icon2x"></i></a></li>
+                  <li><a href="https://github.com/davidawad/spaceshare"><i class="icon-git_circle icon2x"></i></a></li>
                 </ul>
               </div>
             </div>
