lots of changes

--- a/spaceshare/templates/react-experiment.html
+++ b/spaceshare/templates/react-experiment.html
@@ -8,15 +8,21 @@
         <br>
         <!-- Stack the columns on mobile by making one full-width and the other half-width -->
         <div class="row">
+
           <div class="large-6 columns" id="FileForm"></div>
 
+          <!-- <form id="create-form" action="upload" method="POST" enctype="multipart/form-data" onsubmit="fileUpload();">
+                <br>
+      			    <input type="number" name="space" id="reserve" placeholder="e.g. '32' "/>
+      			    <input type="file" name="file">
+                <input id="create-button" type="submit" value="upload" class="radius button" style="font-family:Pacifico ; font-size:2em">
+              </center>
+  		</form> -->
 
           <!-- This is the progress bar defined in react
           <div class="large-6 columns" id="ProgressBar"></div>
-          -->
-          <!-- react search bar
+
           <div class="large-6 columns" id="DynamicSearch"></div>
           -->
         </div>
-
 {% endblock %}
