--- a/spaceshare/templates/base.html
+++ b/spaceshare/templates/base.html
@@ -79,7 +79,7 @@
         <script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
 
 
-        <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+        <script src="{{ url_for('static', filename='js-pure/main.js') }}"></script>
         <script src="{{ url_for('static', filename='js/app.js') }}"></script>
     </body>
 <!-- Written with <3 by David Awad -->
