--- a/spaceshare/templates/react-experiment.html
+++ b/spaceshare/templates/react-experiment.html
@@ -11,6 +11,8 @@
 
           <div class="large-6 columns" id="FileForm"></div>
 
+          <p class="large-6 columns" id="takenn">I will make a query for route taken</p>
+
           <!-- <form id="create-form" action="upload" method="POST" enctype="multipart/form-data" onsubmit="fileUpload();">
                 <br>
       			    <input type="number" name="space" id="reserve" placeholder="e.g. '32' "/>
