--- a/spaceshare/templates/error.html
+++ b/spaceshare/templates/error.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <!-- awesomeness below for generating pages -->
+    <!-- awesomeness below for generating error pages -->
     <div class="row">
       {% if error == 500 %}
       <h2 class="bree"> 500 Internal Server Error: </h2>
@@ -10,7 +10,8 @@
       <h2 class="bree"> 404 Page Not Found Error: </h2>
       <p class="bree" style="font-size:1.3em"> Sorry! looks like you tried to access a page that doesn't exist! Try hitting the link on top left to go back to the home page.</p>
       {% else %}
-      <p> How did you get here?  Hit the link up top to get back where you belong my friend. </p>
+      <h2 class="bree"> Error: {{error}} </h2>
+      <p><a href="mailto:contact@davidawad.com">Tell us about it?</a></p>
       {% endif %}
 
     </div>
