makefile and mvc stuff

--- a/spaceshare/templates/react-experiment.html
+++ b/spaceshare/templates/react-experiment.html
@@ -9,7 +9,7 @@
         <!-- Stack the columns on mobile by making one full-width and the other half-width -->
         <div class="row">
 
-          <div class="large-6 columns" id="FileForm"></div>
+          <div class="large-6 columns panel" id="FileForm"></div>
 
           <p class="large-6 columns" id="takenn">I will make a query for route taken</p>
 
