--- a/spaceshare/templates/includes.html
+++ b/spaceshare/templates/includes.html
@@ -4,8 +4,12 @@
 <!-- Stylesheet Imports -->
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/stylesheet.css') }}">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/animate.css') }}">
+
+<!-- Foundation Stylesheets -->
+<!-- TODO get these from Bower -->
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/foundation.css') }}">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/normalize.css') }}">
+<!-- TODO use Font Awesome Icons -->
 <!-- <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/mfglabs/mfglabs_iconset.css') }}"> -->
 
 <!-- Font Imports -->
