--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -76,7 +76,7 @@
 
         <!-- Javascript Imports -->
         <script src="{{ url_for('static', filename='bower_components/react/react.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.slim.min.js') }}"></script>
 
 
         <script src="{{ url_for('static', filename='_js/main.js') }}"></script>
