renaming and moving templates

--- a/app/templates/includes.html
+++ b/app/templates/includes.html
@@ -3,12 +3,13 @@
 
 <!-- Stylesheet Imports -->
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/stylesheet.css') }}">
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/animate.css') }}">
 
-<!-- Foundation Stylesheets -->
-<!-- TODO get these from Bower -->
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='bower_components/animate.css/animate.min.css') }}">
+
+<!-- Foundation Stylesheets TODO upgrade to foundation 6 -->
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/foundation.css') }}">
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/normalize.css') }}">
+
+
 <!-- TODO use Font Awesome Icons -->
 <!-- <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/mfglabs/mfglabs_iconset.css') }}"> -->
 
