--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,11 +13,7 @@
         </li>
       </ul>
       <section class="top-bar-section">
-        <ul class="right"><!--
-          <li class="divider"></li>
-          <li><a href="/faq.html"><span class="bree">FAQ</span></a></li>
-          <li class="divider"></li>
-          <li><a href="/about.html" ><span class="bree">About Me</a></li> -->
+        <ul class="right">
             <li class="divider"></li>
             <li><a href="https://github.com/davidawad/spaceshare"> <span class="bree">Docs</span></a></li>
             <li class="divider"></li>
@@ -36,51 +32,30 @@
             <span id="gistTwo" class="animated fadeInUp delay-12s" style="z-index=-10;color:#888">instantly.</span></p>
           </div>
           <div class="large-6 columns">
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <p class="bree animated fadeInUp delay-15s" style="font-size:1.3em"> Just upload a file and grab it somewhere else, it's quick, and it's simple, the way file sharing should be. Enjoy. </p>
+
+            <p class="bree animated fadeInUp delay-15s" style="font-size:1.3em"> Just upload a file and grab it somewhere else. It's quick and simple, the way file sharing should be. </p>
           </div>
         </div>
+
         {% block content %}
         {# Actual content specific to each page will be rendered here in the content block #}
         {% endblock %}
+
         <footer class="row">
-          <div class="large-12 columns">
             <hr/>
-            <div class="row">
               <div class="large-6 columns">
-                <p class="look">© 2015 David Awad</p>
+                <p class="look">© 2016 David Awad</p>
               </div>
               <div class="large-6 columns">
                 <ul class="inline-list right">
                   <li><a href="https://facebook.com/david.a.awad"><i class="icon-facebook_circle icon2x"></i></a></li>
+
                   <li><a href="https://twitter.com/realdavidawad"><i class="icon-twitter_circle icon2x"></i></a></li>
+
                   <li><a href="https://github.com/davidawad/spaceshare"><i class="icon-git_circle icon2x"></i></a></li>
                 </ul>
               </div>
-            </div>
-          </div>
-          <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-          ga('create', 'UA-62548061-1', 'auto');
-          ga('send', 'pageview');
-          </script>
         </footer>
-
-        <!-- Javascript Imports -->
-        <script src="{{ url_for('static', filename='bower_components/react/react.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.slim.min.js') }}"></script>
-
-
-        <script src="{{ url_for('static', filename='_js/main.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/app.js') }}"></script>
     </body>
 <!-- Written with <3 by David Awad -->
 </html>
