bunch of stuff probably going to waste

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,32 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Spaceshare | Share Freely</title>
-    <nav class="top-bar" data-topbar>
-      <ul class="title-area">
-        <li class="name">
-          <h1>
-            <a href="/">
-              <span class="look">Spaceshare.me </span>
-            </a>
-          </h1>
-        </li>
-      </ul>
-      <section class="top-bar-section">
-        <ul class="right"><!--
-          <li class="divider"></li>
-          <li><a href="/faq.html"><span class="bree">FAQ</span></a></li>
-          <li class="divider"></li>
-          <li><a href="/about.html" ><span class="bree">About Me</a></li> -->
-            <li class="divider"></li>
-            <li><a href="https://github.com/davidawad/spaceshare"> <span class="bree">Docs</span></a></li>
-            <li class="divider"></li>
-    	</ul>
-      </section>
-    </nav>
-    {# Include all static files in the base template #}
-    {% include 'includes.html' %}
-  </head>
+    {# Include all static files from the header template #}
+    {% include 'head.html' %}
   <body>
     <br>
         <div class="row">
